[gd_scene load_steps=2 format=3 uid="uid://dr0lerip24mpr"]

[ext_resource type="Script" uid="uid://yx4806mus5c4" path="res://nodes/line_chart.gd" id="1_exuqm"]

[node name="LineChart" type="Node2D"]
script = ExtResource("1_exuqm")

[node name="ValueLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="StockLine" type="Line2D" parent="."]
width = 6.0
default_color = Color(0.921569, 0.352941, 0.239216, 1)
joint_mode = 2
round_precision = 19
antialiased = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
